--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "jest": "^27.1.0",
-    "jison": "^0.4.18"
+    "jison": "^0.4.18",
+    "webpack": "^5.51.1"
   }
 }
