--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "css-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.3.2",
     "jest": "^27.1.0",
     "jison": "^0.4.18",
+    "style-loader": "^3.2.1",
     "webpack": "^5.51.1"
   }
 }
