--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^27.0.1",
+    "@types/three": "^0.131.0",
     "css-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
     "jest": "^27.1.0",
     "jison": "^0.4.18",
     "style-loader": "^3.2.1",
     "webpack": "^5.51.1"
+  },
+  "dependencies": {
+    "three": "^0.132.2"
   }
 }
