--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "jest": "^27.1.0",
     "jison": "^0.4.18",
     "style-loader": "^3.2.1",
-    "webpack": "^5.51.1"
+    "webpack": "^5.51.1",
+    "webpack-cli": "^4.8.0"
   },
   "dependencies": {
+    "dat.gui": "^0.7.7",
     "three": "^0.132.2"
   }
 }
