--- a/package.json
+++ b/package.json
@@ -23,5 +23,15 @@
   "dependencies": {
     "dat.gui": "^0.7.7",
     "three": "^0.132.2"
+  },
+
+  "jest": {
+    "moduleDirectories": [
+      "node_modules",
+      "src"
+    ],
+    "roots": [
+      "<rootDir>/test"
+    ]
   }
 }
