--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@types/jest": "^27.0.1",
     "@types/three": "^0.131.0",
     "css-loader": "^6.2.0",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.24.2",
     "html-webpack-plugin": "^5.3.2",
     "jest": "^27.1.0",
     "jison": "^0.4.18",
